Move pagination from query to body
Adjusted swagger definition, regenerated swagger server code.

Rationale: for consistency with Boruta's server.

TODO:
adjust code and tests
