# server/operations/artifacts/artifact_lister.go
@@ -98,6 +98,9 @@ type ArtifactListerBody struct {
 	// filter
 	Filter *weles.ArtifactFilter `json:"Filter,omitempty"`
 
+	// paginator
+	Paginator *weles.ArtifactPaginator `json:"Paginator,omitempty"`
+
 	// sorter
 	Sorter *weles.ArtifactSorter `json:"Sorter,omitempty"`
 }
@@ -107,6 +110,10 @@ func (o *ArtifactListerBody) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if err := o.validateFilter(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validatePaginator(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -130,6 +137,24 @@ func (o *ArtifactListerBody) validateFilter(formats strfmt.Registry) error {
 		if err := o.Filter.Validate(formats); err != nil {
 			if ve, ok := err.(*errors.Validation); ok {
 				return ve.ValidateName("artifactFilterAndSort" + "." + "Filter")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (o *ArtifactListerBody) validatePaginator(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.Paginator) { // not required
+		return nil
+	}
+
+	if o.Paginator != nil {
+		if err := o.Paginator.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("artifactFilterAndSort" + "." + "Paginator")
 			}
 			return err
 		}
