# server/operations/jobs/job_lister.go
@@ -98,6 +98,9 @@ type JobListerBody struct {
 	// filter
 	Filter *weles.JobFilter `json:"Filter,omitempty"`
 
+	// paginator
+	Paginator *weles.JobPaginator `json:"Paginator,omitempty"`
+
 	// sorter
 	Sorter *weles.JobSorter `json:"Sorter,omitempty"`
 }
@@ -107,6 +110,10 @@ func (o *JobListerBody) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if err := o.validateFilter(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validatePaginator(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -130,6 +137,24 @@ func (o *JobListerBody) validateFilter(formats strfmt.Registry) error {
 		if err := o.Filter.Validate(formats); err != nil {
 			if ve, ok := err.(*errors.Validation); ok {
 				return ve.ValidateName("jobFilterAndSort" + "." + "Filter")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (o *JobListerBody) validatePaginator(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.Paginator) { // not required
+		return nil
+	}
+
+	if o.Paginator != nil {
+		if err := o.Paginator.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("jobFilterAndSort" + "." + "Paginator")
 			}
 			return err
 		}
